--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,3 +38,7 @@ jobs:
           asset_name: print_ip-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
       - uses: mattnotmitt/doxygen-action@v1
+      - uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
